# haskell-json-parser

./: README.md  haskell-json-parser.cabal  watch.sh
app/: Main.hs  Users.hs
examples/: users.json
src/: Decode.hs  Json.hs
test/: DecodeTest.hs  JsonTest.hs  Test.hs
