cabal-version: 3.4
name:          haskell-json-parser
version:       0.1.0.0
license:
author:        konnik
maintainer:    niklas.konstenius@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Decode
        Json

    -- other-extensions:
    build-depends:
        , base        ^>=4.18.1.0
        , containers

    hs-source-dirs:   src
    default-language: GHC2021

executable haskell-json-parser
    import:           warnings
    main-is:          Main.hs

    -- other-modules:
    -- other-extensions:
    build-depends:
        , base                 ^>=4.18.1.0
        , haskell-json-parser

    hs-source-dirs:   app
    default-language: GHC2021

test-suite haskell-json-parser-test
    import:           warnings
    default-language: GHC2021

    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:
        DecodeTest
        JsonTest

    build-depends:
        , base                 ^>=4.18.1.0
        , containers
        , haskell-json-parser
        , tasty
        , tasty-hunit
